--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "Duong Lam",
     "license": "ISC",
     "dependencies": {
+        "cors": "^2.8.5",
         "csv": "^5.3.2",
         "express": "^4.17.1",
         "moment": "^2.24.0",
